# django-modals

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt  setup.py
django_examples/: MANIFEST.in  setup.py
django_examples/django_examples/: settings.py  urls.py
django_examples/examples/: modals.py  models.py  urls.py  views.py
django_examples/examples/migrations/: 0005_company_active.py  0006_note.py  0007_company_importance.py  0008_auto_20210806_1131.py  0009_auto_20210806_1324.py
django_examples/examples/templates/: base.html  crud.html  demo.html  layouts.html  no_modal.html  (+4 more)
django_examples/modal_examples/: admin.py  apps.py  import_data.py  models.py  tasks.py  urls.py
django_examples/show_src_code/: modals.py  source_code.py  urls.py
django_modals/: apps.py  datatables.py  decorators.py  fields.py  form_helpers.py  forms.py  helper.py  includes.py  messages.py  mixins.py  modal_upload.py  modals.py  processes.py  task_modals.py  url_helper.py  view_mixins.py  views.py
django_modals/modals/: __init__.py  datatables.py  form_modals.py  formset.py  json_mixin.py  modals.py  multi_form.py  multi_form_formsets.py
django_modals/model_fields/: colour.py
django_modals/templatetags/: modal_tags.py
django_modals/widgets/: colour_picker.py  jquery_datepicker.py  month_picker.py  select2.py  widgets.py
tests/: conftest.py  helpers.py  pytest.ini  test_basic_modals.py  test_crud.py  test_layout.py  test_model_page.py  test_navigation.py  test_other_pages.py  test_widgets.py
(+122 files in other folders)
