[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nested-modals"
version = "0.0.25"
authors = [{name = "Ian Jones", email = "ian@cobi.co.uk"}]
description = "Django app to implement Bootstrap nested modals"
readme = "readme.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django-ajax-helpers>=0.0.22",
    "django-crispy-forms",
    "make-html",
]

[project.urls]
Homepage = "https://github.com/jonesim/django-modals"

[tool.setuptools.packages.find]
include = ["django_modals*"]

[tool.setuptools.package-data]
django_modals = ["**/*"]

[tool.setuptools.exclude-package-data]
django_modals = ["*.pyc", "*.pyo", "__pycache__"]
